syntax = "proto3";
package super_send;
import "google/protobuf/empty.proto";
option go_package = ".;proto"; // 替换为您的实际包路径
//imap服务对象
message ImapServerObj{
  int64 id=1;   //主键
  string imap_server=2;  //imap 服务器主机地址  如 imap.163.com
  string imap_password=3; //imap 密码
  string title=4;        //标题
  string imap_email=5;   //imap 邮箱 用哪个邮箱号发送
  int64 port=6;          //端口
  int64  max_client=7;   //最大客户端数
}
//获取imap列表请求
message GetImapListRequest{
  string keywords = 1;  //关键字
  int64 page=2;         //页数
  int64 limit=3;        //每页条数
}
//imap列表响应
message ImapServerListResponse{
  repeated ImapServerObj data=3;  //imap服务列表
  uint32 code=1; //状态码 0=失败,1=成功
  string message=2;//信息
  int64 count=4; //总条数
}
//设置imap请求
message SetImapRequest{
  int64 id=1;          //主键
  string imap_server=2; //imap 服务器主机地址  如 imap.163.com
  string imap_password=3;//imap 密码
  string title=4;//标题
  string imap_email=5; //imap 邮箱 用哪个邮箱号发送
  int64 port=6;//端口
  int64  max_client=7;//最大客户端数
}
//删除imap请求
message DelImapRequest{
  int64 id=1;  //主键
}
//设置imap响应
message SetImapResponse{
  uint32 code=1; //状态码 0=失败,1=成功
  string message=2;//信息
}
//imap服务
service ImapService {
  //设置imap
  rpc SetImap(SetImapRequest) returns (SetImapResponse){}
  //删除imap
  rpc DelImap(DelImapRequest) returns (SetImapResponse){}
  //获取imap列表
  rpc GetImapList(GetImapListRequest) returns (ImapServerListResponse){}
  //重载imap列表
  rpc Reload(google.protobuf.Empty) returns (SetImapResponse){}
  //获取所有imap列表
  rpc GetImapAllList(google.protobuf.Empty) returns (ImapServerListResponse){}
}